--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: convention_calendar
 description: A Flutter package that provides a customizable calendar widget for scheduling events and managing dates.
-version: 0.0.7
+version: 0.0.8
 homepage: https://github.com/madhusudhanghimire/convention_calendar
 repository: https://github.com/madhusudhanghimire/convention_calendar/tree/main
 
@@ -11,6 +11,7 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  animated_custom_dropdown: ^3.1.1
   flutter:
     sdk: flutter
   intl: ^0.19.0
